name:                Haskell
version:             0.1.0.0
-- synopsis:
-- description:
-- homepage:            https://github.com/githubuser/Haskell#readme
license:             MIT
license-file:        LICENSE
-- author:              
-- maintainer:          
-- copyright:           
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable Haskell
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , gloss
                     , process
                     , random
